# Andromeda

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sevian/andromeda/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: Cube3D_fs.glsl  Cube3D_vs.glsl  a_fs.glsl  a_vs.glsl  b_vs.glsl  betha_fs.glsl  betha_vs.glsl  font_fs.glsl  font_vs.glsl  solid_fs.glsl  solid_vs.glsl  sprite_fs.glsl  sprite_vs.glsl  test1a.fs
app/src/main/cpp/: Actor.cpp  Actor.h  Application.cpp  Application.h  Asset.cpp  Asset.h  Button2D.cpp  Button2D.h  CMakeLists.txt  Cube.cpp  Cube.h  Cube3D.cpp  Cube3D.h  EventEngine.cpp  EventEngine.h  Frame.h  GameEngine.cpp  GameEngine.h  Horse.cpp  Horse.h  Object3D.cpp  Object3D.h  QueueSound.cpp  QueueSound.h  Race.cpp  Race.h  Rectangle.cpp  Rectangle.h  Rectangle2D.cpp  Rectangle2D.h  Rinconada.cpp  Rinconada.h  Scene.cpp  Scene.h  ShadersManager.cpp  ShadersManager.h  SoundSystem.cpp  SoundSystem.h  Sprite.cpp  Sprite.h  (+23 more)
app/src/main/java/com/sevian/andromeda/: MainActivity.java
app/src/test/java/com/sevian/andromeda/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
